<resources>
    <string name="app_name">ChessTimer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_time_mode_description">Add a new time mode button</string>
    <string name="colon">:</string>
    <string name="player_1_title">Player 1</string>
    <string name="player_2_title">Player 2</string>
    <string name="player_2_settings_btn">Set Player 2</string>
    <string name="save_settings_btn">Save mode</string>
    <string name="subtracting_seconds">Subtracting seconds</string>
    <string name="subtracting_minutes">Subtracting minutes</string>
    <string name="subtracting_hours">Subtracting hours</string>
    <string name="adding_seconds">Adding seconds</string>
    <string name="adding_minutes">Adding minutes</string>
    <string name="adding_hours">Adding hours</string>
    <string name="swap_times_button">Swap times</string>
    <string name="start_game_button">START</string>
    <string name="clear_data">Clear data</string>
    <string name="day_night_mode">day_night_mode</string>
    <string name="clearing_all_data_dialog_title">Clearing all time modes</string>
    <string name="clearing_all_data_dialog_text">Are you sure you want to delete all time modes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_over_message">GAME OVER</string>
</resources>