<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".addingNewTimeModeFragment.AddingTimeModeFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.chesstimer.addingNewTimeModeFragment.AddTimeModeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_double">

        <TextView
            android:id="@+id/player_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:isSecondPlayerTitle="@{viewModel.navigatedToSecondPlayer}"
            tools:text="Player1" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/add_hour_btn"
                    style="@style/TransparentButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:clickable="true"
                    android:contentDescription="@string/adding_hours"
                    android:focusable="true"
                    android:onClick="@{() -> viewModel.onAddHourClick()}"
                    android:src="@drawable/add_button_40"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout" />

                <TextView
                    android:id="@+id/hour_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(viewModel.hours)}"
                    android:textSize="@dimen/time_picker_digit_size"
                    tools:text="00" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/subtract_hour_btn"
                    style="@style/TransparentButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:clickable="true"
                    android:contentDescription="@string/subtracting_hours"
                    android:focusable="true"
                    android:onClick="@{() -> viewModel.onSubtractHourClick()}"
                    android:src="@drawable/remove_button_40"
                    app:layout_constraintStart_toStartOf="@+id/add_hour_btn"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/colon"
                android:textSize="@dimen/time_picker_digit_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/add_minute_btn"
                    style="@style/TransparentButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:clickable="true"
                    android:contentDescription="@string/adding_minutes"
                    android:focusable="true"
                    android:onClick="@{() -> viewModel.onAddMinuteClick()}"
                    android:src="@drawable/add_button_40"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout" />

                <TextView
                    android:id="@+id/minutes_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.minutes.toString()}"
                    android:textSize="@dimen/time_picker_digit_size"
                    tools:text="00" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/subtract_minute_btn"
                    style="@style/TransparentButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:clickable="true"
                    android:contentDescription="@string/subtracting_minutes"
                    android:focusable="true"
                    android:onClick="@{() -> viewModel.onSubtractMinuteClick()}"
                    android:src="@drawable/remove_button_40"
                    app:layout_constraintEnd_toEndOf="@+id/add_minute_btn"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/colon"
                android:textSize="@dimen/time_picker_digit_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/add_second_btn"
                    style="@style/TransparentButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:clickable="true"
                    android:contentDescription="@string/adding_seconds"
                    android:focusable="true"
                    android:onClick="@{() -> viewModel.onAddSecondClick()}"
                    android:src="@drawable/add_button_40"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout" />


                <TextView
                    android:id="@+id/seconds_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.seconds.toString()}"
                    android:textSize="@dimen/time_picker_digit_size"
                    tools:text="00" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/subtract_second_btn"
                    style="@style/TransparentButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:clickable="true"
                    android:contentDescription="@string/subtracting_seconds"
                    android:focusable="true"
                    android:onClick="@{() -> viewModel.onSubtractSecondClick()}"
                    android:src="@drawable/remove_button_40"
                    app:layout_constraintEnd_toEndOf="@+id/add_second_btn"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/player2_save_settings_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:onClick="@{() -> viewModel.onNextPlayerClick()}"
            app:icon="@drawable/arrow_next_24"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:isSecondPlayer="@{viewModel.navigatedToSecondPlayer}"
            app:currentTime="@{viewModel.currentTimeInSeconds}"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>